<resources>
    <string name="no_news">No News To View</string>
    <string name="app_name">Science House</string>
    <string name="hopper_desc">Hoppers is a fun thinking game that teaches logic, problem solving and evaluation of consequences. A set of frogs on a pond, jumping until only one is left standing. </string>
    <string name="hopper_main">
        • Skills: Logic - Problem Solving –Planning- sequential thinking
        • Age: 5 and Up
        • Game type: Cooperative
        • Players: 1 Player or more
        • Levels: 40</string>
    <string name="enis">Einstein’s riddle is one of the complex riddles developed by the physicist Albert Einstein and relies on the basis of logical and critical thinking. The game requires a huge amount of concentration, and logical organization and sequencing towards the solution. The game addresses skills of team work and team dynamics. We ask ourselves, is team work always the best method towards achieving solutions? What are the characteristics of good team?</string>
    <string name="smm">• Skills: Memory, analysis and finding connections   • Age group: 8 years and above  • Type: competitive     • Number of players: 2 to 4 players     • Levels: none</string>
    <string name="tqd">With 4 pieces of cardboard the player is challenged to build meaningful shapes by putting them together, not covering any in order to build a shape from the ones in the shape’s list.</string>
    <string name="tqm">• Skills: imagination, analysis, thinking outside the box    • Age group: 5 and above    • Type: cooperative     • Number of players: 2 to 4 player  • Number of levels: 36</string>
    <string name="cyd">Challenge yourself is a fun game that puts the player in front of 14 challenges, with each card having a question in the form of a riddle. The player has to solve the riddle and can use the solution symbols on the opposite side of the card. The player can also review the “knot” to know why these riddles cannot be solved using traditional thinking methods.</string>
    <string name="cym">• Skills: problem solving, analysis and connections, thinking outside the box    • Age group: 10 and above   • Type of game: cooperative     • Number of players: one    • Number of levels: 14</string>
    <string name="badird">A fun game of 14 thinking statuses, in each card you will find a thinking status in the form of a riddle
Each player has to think, s/he can use the solution code on the back of the card, they can also check the “knot” to know what to do in each status.</string>
    <string name="badirm">• Skills: problem solving, analysis, thinking outside the box     • Age group: 12 and above   • Type of game: cooperative     • Number of players: one    • Number of levels: 14</string>
    <string name="rhd">Imagine you have gone to visit a friend or a relative, you parked your car in the building parking, and when it was time to leave, you find that your car was stuck after the neighbors have come home. They left their car keys for you to get your car out. Try to get out of the parking lot using the rules of the game.</string>
    <string name="rhm">• Skills: problem solving, setting goals, planning, analytical and logical thinking  \• Age group: 8 and above    • Type: cooperative     • Number of players: one or two     • Number of levels: 40 levels in each phase</string>
    <string name="smd">Through finding the relation between the card through pictures or texts, the player develops the memory and analyzes the network in addition to knowing the scientists and their most important achievement in an amusing way.</string>
    <string name="no_internet_connection">Please Check Your Internet Connection</string>
    <string name="about_us">"The Science and Technology House is a dynamic body that follows the developments and advancements in the scientific, engineering, and technology aspects of our everyday lives. These phenomena are presented to the house’s visitors (children and adults) in an interactive manner that guarantees the visitors’ engagement in the process of knowledge acquisition, and guarantees the visitors’ entertainment with science and technology. The science house is considered an extracurricular educational institution that assists educators in channeling true knowledge to children in practical and exiting manner. It is also a place to have fun and spend vacation days as it contains various sections that are of interest to all ages and educational levels. The Science House is named after Sa’adeh family because this prestigious family from Birzeit has donated its old house for 15 years to be renovated and used by Al Nayzak Organization. The Science House aims at receiving 15 thousand students annually. Currently, the House is a destination for schools where specialized scientific trips are organized to enjoy hours of science and fun in a distinctive manner. The Science House experience is not only limited to specialized scientific visits, but can also re-introduces daily activities and special occasions.   "\n\n</string>
    <string name="about_us_ar">بيت العلوم والتكنولوجيا هو مكان حيوي يتبع التطورات في الجوانب العلمية والهندسية والتكنولوجية في حياتنا اليومية. وتُعرض هذه الظواهر على زوار المنزل (الأطفال والبالغين) بطريقة تفاعلية تكفل مشاركة الزوار في عملية اكتساب المعرفة ، وتضمن ترفيه الزوار بالعلوم والتكنولوجيا. يعتبر بيت العلوم مؤسسة تعليمية خارج المنهج الدراسي تساعد المعلمين في توجيه المعرفة الحقيقية للأطفال بطريقة عملية.وهو أيضًا مكان لقضاء وقت ممتع وقضاء أيام عطل حيث أنه يحتوي على أقسام مختلفة تهم جميع الأعمار والمستويات التعليمية. تم تسمية بيت العلوم على اسم عائلة سعاده لأن هذه العائلة المرموقة من بيرزيت قد تبرعت بمنزلها القديم لمدة 15 عامًا ليتم تجديده واستخدامه من قبل منظمة النيزك. يهدف بيت العلوم إلى استقبال 15 ألف طالب سنويًا. حاليا ، يعتبر بيت العلوم وجهة للمدارس حيث يتم تنظيم رحلات علمية متخصصة للتمتع بساعات من العلوم والمرح بطريقة مميزة. لا تقتصر تجربة بيت العلوم على الزيارات العلمية المتخصصة فحسب ، بل يمكنها أيضًا إعادة تقديم الأنشطة اليومية والمناسبات الخاصة. \n\n</string>
    <string name="booktourbutton">Book A Tour</string>
    <string name="giftshopbutton">Gift Shop</string>
    <string name="latestnews">Latest News</string>
    <string name="aboutus">About Us</string>
    <string name="contactus">Contact Us</string>
    <string name="booktourbtn">احجز زيارة</string>
    <string name="giftshopbtn">متجر الهدايا</string>
    <string name="latestnewsbtn">أخر الاخبار</string>
    <string name="aboutusbtn">من نحن</string>
    <string name="contactusbtn">تواصل معنا</string>
    <string name="discar">الوصف : </string>
    <string name="skillar">المهارات : </string>
    <string name="namear">الاسم : </string>
    <string name="phnnumar">رقم الهاتف : </string>
    <string name="subar">الموضوع : </string>
    <string name="msgar">الرسالة : </string>
    <string name="sndar">ارسل</string>
    <string name="name">Name :</string>
    <string name="phnnum">Mobile number :</string>
    <string name="sub">Subject :</string>
    <string name="msg">Message :</string>
    <string name="teachersname">Teachers Name</string>
    <string name="dbref">results</string>
    <string name="faildfirebasedb">Failed to read value</string>
    <string name="dbarbref">arbTitle</string>
    <string name="dbengref">engTitle</string>
    <string name="about_ar_tv_booking">احجز \nزيارة !</string>
    <string name="about_ar_tv_gift">متجر \nالهدايا</string>
    <string name="about_ar_tv_news">اخر \nالاخبار</string>
    <string name="about_ar_tv_contact">تواصل \nمعنا</string>
    <string name="subject_booking">Booking Tour</string>
    <string name="about_us_tv_booking">Book A \nTour</string>
    <string name="about_us_tv_news">Latest \nNews</string>
    <string name="about_us_tv_contact">Contact \nus</string>
    <string name="about_us_tv_gift">Gift \nShop</string>
    <string name="err">Error</string>
    <string name="badirarmain">• المهارات: حل المشكلات ، التحليل ، التفكير خارج الصندوق• الفئة العمرية: 12 سنة وما فوق• نوع اللعبة: تعاونية• عدد اللاعبين: واحد• عدد المستويات: 14</string>
    <string name="chlngarmain">• المهارات: حل المشكلات ، التحليل والروابط و التفكير خارج الصندوق\n
                • الفئة العمرية: 10 سنوات فما فوق\n
                • نوع اللعبة: تعاونية\n
                • عدد اللاعبين: واحد\n
                • عدد المستويات: 14</string>
    <string name="badirardesc">لعبة ممتعة من 14 حالة تفكير ، في كل بطاقة سوف تجد حالة تفكير في شكل اللغزعلى كل لاعب أن يفكر ، يمكنه استخدام رمز الحل على ظهر البطاقة ، كما يمكنه التحقق من "العقدة" لمعرفة ما يجب القيام به في كل حالة.</string>
    <string name="chlngardesc">تحدي نفسك هي لعبة ممتعة تضع اللاعب أمام 14 تحديًا ، مع وجود لكل بطاقة سؤال في شكل لغز. يتعين على اللاعب حل اللغز ويمكنه استخدام رموز الحل على الجانب الآخر من البطاقة. يمكن للاعب أيضا مراجعة "العقدة" لمعرفة لماذا لا يمكن حل هذه الألغاز باستخدام أساليب التفكير التقليدية.</string>
    <string name="tquestarmain">• المهارات: الخيال، التحليل و التفكير خارج الصندوق• الفئة العمرية: 5 وما فوق• النوع: تعاونية• عدد اللاعبين: 2 إلى 4 لاعب• عدد المستويات: 36</string>
    <string name="tquestardesc">مع 4 قطع من الورق المقوى ، يتم تحدي اللاعب لبناء أشكال ذات معنى من خلال جمعها معًا ، وليس تغطية أي منها لإنشاء شكل من الأشكال الموجودة في قائمة الاشكال.</string>
    <string name="scmemardesc">من خلال إيجاد العلاقة بين البطاقة من خلال الصور أو النصوص ، يقوم اللاعب بتطوير الذاكرة وتحليل الشبكة بالإضافة إلى معرفة العلماء وإنجازهم الأكثر أهمية بطريقة مسلية.</string>
    <string name="scmemarmain">• المهارات: الذاكرة والتحليل وإيجاد الصلات• الفئة العمرية: 8 سنوات فما فوق• النوع: تنافسية• عدد اللاعبين: 2 إلى 4 لاعبين</string>
    <string name="enisardesc">إن لغز آينشتاين هو أحد الألغاز المعقدة التي طورها الفيزيائي ألبرت آينشتاين ويعتمد على أساس التفكير المنطقي والنقدي. اللعبة تتطلب قدرا كبيرا من التركيز ، والتنظيم والتسلسل المنطقي نحو الحل. تعالج اللعبة مهارات فريق العمل وديناميكيات الفريق. نسأل أنفسنا ، هل العمل الجماعي هو أفضل طريقة لتحقيق الحلول؟ ما هي خصائص فريق جيد؟</string>
    <string name="hoppersardesc">هي لعبة تفكير ممتعة تعلم المنطق، حل المشكلات، وتقييم النتائج. تتكون من مجموعة من الضفادع على بركة يقومون بالقفز على تلك البركة حتى يتبقى اخر ضفدع .</string>
    <string name="hoppersarmain">• المهارات: المنطق - حل المشكلات - التخطيط - التفكير التسلسلي • العمر: 5 سنوات وما فوق • نوع اللعبة: تعاونية • اللاعبون: لاعب واحد أو أكثر • المستويات: 40</string>
    <string name="chckcon">Please Check Your Internet Connection</string>
    <string name="errname">Please Insert Your Name</string>
    <string name="errnumber">Please Insert Your Number</string>
    <string name="errcity">Please Insert Your City</string>
    <string name="errschool">Please Insert Your School Name</string>
    <string name="errschoolnumber">Please Insert Your School Number</string>
    <string name="errstudentpkus">Sorry But We Could Not Receive More Than 50 Students</string>
    <string name="errstudentminus">Students Number cant be Negative or zero</string>
    <string name="errteacherplus">Sorry But We Could Not Receive More Than 5 Teachers</string>
    <string name="ils">ILS</string>
    <string name="cty">City</string>
    <string name="bookit">Book IT</string>
    <string name="addone">+</string>
    <string name="addten">+10</string>
    <string name="one">1</string>
    <string name="negone">-</string>
    <string name="negten">-10</string>
    <string name="slctdate">Click To Select The Date</string>
    <string name="dtetor">Date Of Tour :</string>
    <string name="sclname">School Name</string>
    <string name="sclnumber">School Phone</string>
    <string name="tchrnum">Number Of Teachers:</string>
    <string name="stdntnum">Number Of Student:</string>
    <string name="costar">ثمن حجز الزيارة : </string>
    <string name="nis">ش.ج</string>
    <string name="bookar">احجز!</string>
    <string name="cityartv">المدينة :</string>
    <string name="studnumar">عدد الطلاب :      </string>
    <string name="cost">Your Tour Costs : </string>
</resources>