<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="#f5f6fa"
    android:orientation="vertical"
    tools:context=".Tour">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="20sp"
        android:paddingBottom="5dp">

        <TextView
            style="@style/BookingTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teachersname" />

        <EditText
            android:id="@+id/Booking_Person_Name"
            style="@style/BookingTour_ET"
            android:cursorVisible="false"
            android:textColorLink="@color/edit_booking" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:paddingBottom="5dp">

        <TextView
            style="@style/BookingTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phnnum" />

        <EditText
            android:id="@+id/Booking_Person_Number"
            style="@style/BookingTour_ET"
            android:inputType="phone"
            android:textColorLink="@color/edit_booking" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20sp"
        android:paddingBottom="5dp">

        <TextView
            style="@style/BookingTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cty" />

        <EditText
            android:id="@+id/Booking_City_Name"
            style="@style/BookingTour_ET"
            android:textColorLink="@color/edit_booking" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:paddingBottom="5dp">

        <TextView
            style="@style/BookingTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sclname" />

        <EditText
            android:id="@+id/Booking_ORG_Name"
            style="@style/BookingTour_ET"
            android:textColorLink="@color/edit_booking" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:paddingBottom="10dp">

        <TextView
            style="@style/BookingTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sclnumber"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Booking_ORG_Number"
            style="@style/BookingTour_ET"
            android:inputType="phone"
            android:textColorLink="@color/edit_booking" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:paddingBottom="10dp">

        <TextView
            style="@style/BookingTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dtetor" />

        <TextView
            android:id="@+id/Booking_Date"
            style="@style/BookingTour_ET"
            android:text="@string/slctdate"
            android:textColor="#718093" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:paddingBottom="5dp">

        <TextView
            style="@style/BookingTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tchrnum" />

        <Button
            android:id="@+id/minusA"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginLeft="15sp"
            android:background="@drawable/button_grey"
            android:fontFamily="@font/quicksand"
            android:text="@string/negone"
            android:textColor="#f5f6fa"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/adultsN"
            style="@style/BookingTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:text="@string/one" />

        <Button
            android:id="@+id/plusadults"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginLeft="15sp"
            android:background="@drawable/button_grey"
            android:fontFamily="@font/quicksand"
            android:text="@string/addone"
            android:textColor="#f5f6fa"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/BookingTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:text="@string/stdntnum" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/minusKten"
                android:layout_width="70sp"
                android:layout_height="40sp"
                android:layout_marginLeft="15sp"
                android:background="@drawable/button_grey"
                android:fontFamily="@font/quicksand"
                android:text="@string/negten"
                android:textColor="#f5f6fa"
                android:textSize="20sp" />
        <Button
            android:id="@+id/minusK"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginLeft="15sp"
            android:background="@drawable/button_grey"
            android:fontFamily="@font/quicksand"
            android:text="@string/negone"
            android:textColor="#f5f6fa"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/kidsN"
            style="@style/BookingTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:text="@string/one" />

        <Button
            android:id="@+id/plusK"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginLeft="15sp"
            android:background="@drawable/button_grey"
            android:fontFamily="@font/quicksand"
            android:text="@string/addone"
            android:textColor="#f5f6fa"
            android:textSize="20sp" />
            <Button
                android:id="@+id/plusKten"
                android:layout_width="70sp"
                android:layout_height="40sp"
                android:layout_marginLeft="15sp"
                android:background="@drawable/button_grey"
                android:fontFamily="@font/quicksand"
                android:text="@string/addten"
                android:textColor="#f5f6fa"
                android:textSize="20sp" />
        </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/costs"
        style="@style/BookingTour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/cost" />

    <Button
        android:id="@+id/Booking_Tour_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_grey"
        android:fontFamily="@font/quicksand"
        android:paddingHorizontal="20sp"
        android:text="@string/bookit"
        android:textColor="#f5f6fa"
        android:textSize="20sp" />
</LinearLayout>

