<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".About">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_weight=".25"
        android:scaleType="centerInside"
        android:src="@drawable/sc_nay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/about_us"
            android:textColor="#0097e6"
            android:textSize="22sp"
            android:textStyle="bold" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_weight=".2">

        <Button
            android:id="@+id/book_tour_as"
            style="@style/about_us_btns"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:text="@string/about_us_tv_booking" />

        <Button
            android:id="@+id/Latest_news_as"
            style="@style/about_us_btns"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/about_us_tv_news" />

        <Button
            android:id="@+id/GShop_as"
            style="@style/about_us_btns"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/about_us_tv_gift" />

        <Button
            android:id="@+id/Contact_US_as"
            style="@style/about_us_btns"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/about_us_tv_contact" />
    </LinearLayout>
</LinearLayout>