<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    tools:layout_editor_absoluteY="25dp">
    <!--616163 , 595b66 ,android:background="#616163" -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/toAr"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/lang_button"
                    android:fontFamily="@font/quicksand"
                    android:scaleType="centerInside"
                    android:text="عربي"
                    android:textColor="#f5f6fa" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="190dp"
                    android:layout_height="200dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="50dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/sc_home" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12.5sp"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/book"
                                style="@style/MainActivityButtons"
                                android:layout_marginTop="0dp"
                                android:background="@drawable/button_white"
                                android:text="@string/booktourbutton"
                                android:textColor="#0097e6" />

                            <Button
                                android:id="@+id/gifts"
                                style="@style/MainActivityButtons"
                                android:text="@string/giftshopbutton" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12.5sp"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/news"
                                style="@style/MainActivityButtons"
                                android:layout_marginTop="0dp"
                                android:text="@string/latestnews" />

                            <Button
                                android:id="@+id/about"
                                style="@style/MainActivityButtons"
                                android:text="@string/aboutus" />

                        </LinearLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/contact"
                            style="@style/MainActivityButtons"
                            android:layout_centerHorizontal="true"
                            android:text="@string/contactus" />
                    </RelativeLayout>
                </LinearLayout>
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:src="@drawable/nay"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>