<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_news"
    tools:context=".Contact">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        tools:layout_editor_absoluteX="16sp"
        tools:layout_editor_absoluteY="200sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand"
            android:text="@string/name"
            android:textColor="@color/g_c"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/contacting_field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:fontFamily="@font/quicksand"
            android:textColor="#0097e6"
            android:textColorLink="@color/edit_booking" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="vertical"
            android:paddingLeft="20sp"
            tools:layout_editor_absoluteX="16sp"
            tools:layout_editor_absoluteY="200sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:text="@string/phnnum"
                android:textColor="@color/g_c"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/contacting_field_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:fontFamily="@font/quicksand"
                android:inputType="phone"
                android:textColor="#0097e6"
                android:textColorLink="@color/edit_booking" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="vertical"
            android:paddingLeft="20sp"
            tools:layout_editor_absoluteX="16sp"
            tools:layout_editor_absoluteY="200sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:text="@string/sub"
                android:textColor="@color/g_c"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/contacting_field_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:fontFamily="@font/quicksand"
                android:inputType="textEmailSubject"
                android:textColor="#0097e6"
                android:textColorLink="@color/edit_booking" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:paddingLeft="20sp"
            tools:layout_editor_absoluteX="16sp"
            tools:layout_editor_absoluteY="200sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:text="@string/msg"
                android:textColor="@color/g_c"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/contacting_field_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:fontFamily="@font/quicksand"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textColor="#0097e6"
                android:textColorLink="@color/edit_booking" />
        </LinearLayout>


</LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <Button
        android:id="@+id/contacting_button_send"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_grey"
        android:fontFamily="@font/quicksand"
        android:text="Send"
        android:textColor="@color/background_news"
        android:textSize="16sp" />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>